tweaks and fixes for tmux p10k

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,11 +5,13 @@
 # set Zsh as your default Tmux shell
 set-option -g default-shell /bin/zsh
 
+set -g default-terminal "screen-256color"
+
 # make control keys work
 set-window-option -g xterm-keys on
 
 # increase scroll-back history
-set -g history-limit 5000
+set -g history-limit 10000
 
 # mouse things
 set -g mouse on
