gm3 and 4 and escape time for tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,8 @@ set-option -g default-shell /bin/zsh
 
 set -g default-terminal "screen-256color"
 
+set -sg escape-time 0
+
 # make control keys work
 set-window-option -g xterm-keys on
 
